# conantest

./: Readme.md
packA/: CMakeLists.txt  conanfile.py
packA/include/: aa.h
packA/src/: aa.cpp
packB/: CMakeLists.txt  conanfile.py
packB/include/: bb.h
packB/src/: bb.cpp
packC/: CMakeLists.txt  conanfile.py
packC/include/: cc.h
packC/src/: cc.cpp
packC/unittest/: CMakeLists.txt  test.cpp
packX/: CMakeLists.txt  conanfile.py
packX/include/: xx.h
packX/src/: xx.cpp
